--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <form id="contact-form" action="" class="comments">
-                <p>Laisser un Commentaire</p>
+                <p>Laissez un Commentaire</p>
                 <div class="comments_top">
                     <input name="user_name" id="Username" type="text" placeholder="Nom" required>
                     <input name="user_surname" id="Surname" type="text" placeholder="Prénom" required>
