--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
             <br><br>
             <div class="footer_bottom">
-                <small>© 2025, Maryse's Cakes | Design by elidev-pix</small> 
+                <small>© 2025, Maryse's Meals | Design by elidev-pix</small> 
             </div>
         </footer>
         
